fix: use new Java API (#996)
* refactor: migrate getFamily et getFAmilies

* feat: add unit test

* fix: remove sonar issues

* feat: add e2e test

* feat: add hypermedia

* fix: delete useless hyhpermedia link

* fix: remove sonar issue

* fix: use new Java API

* fix: remove issues